Fixed vertical height issue on mobile.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -98,7 +98,7 @@ $transparent-white: rgba(255,255,255, 0.97);
     }
 
     > section {
-      height: 100vh;
+      height: 100%;
       width: 100%;
     }
 
